--- a/index.html
+++ b/index.html
@@ -5,13 +5,16 @@
 
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
+	<link rel="stylesheet" href="style.css">
 	<meta charset="UTF-8">
 	<title>React App</title>
 </head>
 
 <body>
 	<div id="app"></div>
+
 	<script src="index.js"></script>
+
 </body>
 
 </html>
