--- a/index.html
+++ b/index.html
@@ -6,12 +6,28 @@
 	<!-- Latest compiled and minified CSS -->
 	<link rel="stylesheet" href="https://maxcdn.bootstrapcdn.com/bootstrap/latest/css/bootstrap.min.css">
 	<link rel="stylesheet" href="style.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/animate.css/3.5.2/animate.min.css">
+  <link rel="stylesheet" href="https://cdnjs.cloudflare.com/ajax/libs/toastr.js/2.1.3/toastr.min.css">
 	<meta charset="UTF-8">
 	<title>React App</title>
+	<style>
+      #map {
+        height: 85%;
+      }
+      html, body {
+        height: 100%;
+        margin: 0;
+        padding: 0;
+      }
+  </style>
 </head>
 
 <body>
+
 	<div id="app"></div>
+	<div id="map"></div>
+    
+   
 
 	<script src="index.js"></script>
 
