--- a/pub/index.html
+++ b/pub/index.html
@@ -20,19 +20,23 @@
         padding: 0;
       }
   </style>
-<!-- <script>
+  <script>
         var xhReq = new XMLHttpRequest();
-        xhReq.open("GET", "../manifest.webapp", false);
+        xhReq.open("GET", "manifest.webapp", false);
         xhReq.send(null);
         var serverResponse = JSON.parse(xhReq.responseText);
         var dhisAPI = serverResponse.activities.dhis.href;
         console.log(dhisAPI);
-    </script>--->
+    </script>
 </head>
 
 <body>
+  
 	  <div id="app"></div>
 	  <div id="map"></div>
+
+   
+
 	<script src="index.js"></script>
 
 </body>
