--- a/index.html
+++ b/index.html
@@ -17,14 +17,14 @@
         padding: 0;
       }
   </style>
-    <!--<script>
+    <script>
         var xhReq = new XMLHttpRequest();
         xhReq.open("GET", "../manifest.webapp", false);
         xhReq.send(null);
         var serverResponse = JSON.parse(xhReq.responseText);
         var dhisAPI = serverResponse.activities.dhis.href;
         console.log(dhisAPI);
-    </script>-->
+    </script>
 </head>
 
 <body>
